--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "iscroll": "5.1.1",
     "abyssa": "6.5.0",
     "lodash": "2.4.1",
-    "prismic.io": "1.0.9",
+    "prismic.io": "1.0.10",
     "mobile-button": "0.2.0",
-    "color": "0.6.0"
+    "color": "0.6.0",
+    "signals": "1.0.0"
   },
   "devDependencies": {
     "handlebars": "1.3.0",
