--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "farewell",
   "dependencies": {
     "bootstrap": "3.1.1",
-    "font-awesome": "4.0.3"
+    "font-awesome": "4.0.3",
+    "mousetrap": "1.4.6"
   }
 }
