--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prismic.io": "1.0.10",
     "mobile-button": "0.2.0",
     "color": "0.6.0",
-    "signals": "1.0.0"
+    "signals": "1.0.0",
+    "hammerjs": "1.1.2"
   },
   "devDependencies": {
     "handlebars": "1.3.0",
