--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "gulp-watch": "0.6.2",
     "gulp-define-module": "0.1.1",
     "gulp-declare": "0.2.0",
-    "gulp-concat": "2.2.0"
+    "gulp-concat": "2.2.0",
+    "gulp-uglify": "0.3.0",
+    "gulp-rename": "1.2.0",
+    "gulp-minify-css": "0.3.4"
   },
   "repository" : { "type" : "git", "url" : "https://github.com/pauldijou/farewell" }
 }
