--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# GLOBAL
 bower_components
 node_modules
+templates/build/templates.js
+
+# ENV
 resources/*
 !resources/fonts
 !resources/mobile.js
-templates/build/templates.js
