--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "gulp-concat": "2.2.0",
     "gulp-uglify": "0.3.0",
     "gulp-rename": "1.2.0",
-    "gulp-minify-css": "0.3.4"
+    "gulp-minify-css": "0.3.4",
+    "gulp-usemin": "0.3.4",
+    "gulp-rev": "0.4.0",
+    "gulp-clean": "0.2.4"
   },
   "repository" : { "type" : "git", "url" : "https://github.com/pauldijou/farewell" }
 }
