--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bootstrap": "3.1.1",
     "font-awesome": "4.0.3",
-    "mousetrap": "1.4.6"
+    "mousetrap": "1.4.6",
+    "lightbox2": "2.7.1"
   }
 }
