--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": ["travel"],
   "version": "0.1.0",
   "dependencies": {
+    "jquery": "2.1.1",
     "q": "1.0.1",
     "zanimo": "1.1.0",
     "iscroll": "5.1.1",
@@ -14,7 +15,8 @@
     "mobile-button": "0.2.0",
     "color": "0.6.0",
     "signals": "1.0.0",
-    "hammerjs": "1.1.3"
+    "hammerjs": "1.1.3",
+    "scrollmonitor": "1.0.8"
   },
   "devDependencies": {
     "handlebars": "1.3.0",
@@ -35,7 +37,17 @@
     "gulp-minify-css": "0.3.4",
     "gulp-usemin": "0.3.4",
     "gulp-rev": "0.4.0",
-    "gulp-clean": "0.2.4"
+    "gulp-clean": "0.2.4",
+    "browserify-shim": "v3.5.0"
+  },
+  "browserify": {
+    "transform": [ "browserify-shim" ]
+  },
+  "browser": {
+    "lightbox": "./node_modules/lightbox/js/lightbox.js"
+  },
+  "browserify-shim": {
+    "lightbox": "lightbox"
   },
   "repository" : { "type" : "git", "url" : "https://github.com/pauldijou/farewell" }
 }
