--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "color": "0.6.0",
     "signals": "1.0.0",
     "hammerjs": "1.1.3",
-    "scrollmonitor": "1.0.8"
+    "steady": "0.3.0"
   },
   "devDependencies": {
     "handlebars": "1.3.0",
