--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "color": "0.6.0",
     "signals": "1.0.0",
     "hammerjs": "1.1.3",
-    "steady": "0.3.0"
+    "steady": "1.1.0"
   },
   "devDependencies": {
+    "browserify": "~3.36.0",
+    "watchify": "~0.10.1",
+    "vinyl-source-stream": "~0.1.1",
     "handlebars": "1.3.0",
     "connect": "2.14.3",
-    "gulp": "3.6.1",
-    "gulp-less": "1.2.3",
-    "gulp-browserify": "0.5.0",
-    "gulp-handlebars": "2.0.0",
+    "gulp": "3.8.5",
+    "gulp-less": "1.3.0",
+    "gulp-handlebars": "2.1.0",
     "gulp-imagemin": "0.1.5",
     "gulp-livereload": "1.3.1",
     "gulp-notify": "1.2.4",
@@ -32,18 +34,20 @@
     "gulp-declare": "0.2.0",
     "gulp-concat": "2.2.0",
     "gulp-uglify": "0.3.0",
+    "gulp-util": "~2.2.14",
     "gulp-rename": "1.2.0",
     "gulp-minify-css": "0.3.4",
     "gulp-usemin": "0.3.4",
     "gulp-rev": "0.4.0",
     "gulp-clean": "0.2.4",
-    "browserify-shim": "v3.5.0"
+    "browserify-shim": "v3.5.0",
+    "pretty-hrtime": "~0.2.1"
   },
   "browserify": {
     "transform": [ "browserify-shim" ]
   },
   "browser": {
-    "lightbox": "./node_modules/lightbox/js/lightbox.js"
+    "lightbox": "./bower_components/lightbox2/js/lightbox.js"
   },
   "browserify-shim": {
     "lightbox": "lightbox"
