--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "jquery": "2.1.1",
     "q": "1.0.1",
     "zanimo": "1.1.0",
-    "abyssa": "6.5.0",
+    "abyssa": "pauldijou/abyssa-js#34ef3ce8f5e77b348048a28131b3fb1cb13b1a38",
     "lodash": "2.4.1",
     "prismic.io": "1.0.10",
     "mobile-button": "0.2.0",
     "color": "0.6.0",
     "signals": "1.0.0",
     "hammerjs": "1.1.3",
-    "steady": "1.1.0"
+    "steady": "1.1.0",
+    "blueimp-gallery": "2.15.1"
   },
   "devDependencies": {
     "browserify": "~3.36.0",
@@ -47,7 +48,7 @@
     "transform": [ "browserify-shim" ]
   },
   "browser": {
-    "lightbox": "./bower_components/lightbox2/js/lightbox.js"
+    "lightbox": "./node_modules/blueimp-gallery/js/blueimp-gallery.min.js"
   },
   "browserify-shim": {
     "lightbox": "lightbox"
