--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "dependencies": {
     "jquery": "2.1.1",
     "q": "1.0.1",
-    "zanimo": "1.1.0",
-    "abyssa": "pauldijou/abyssa-js#34ef3ce8f5e77b348048a28131b3fb1cb13b1a38",
     "lodash": "2.4.1",
-    "prismic.io": "1.0.10",
-    "mobile-button": "0.2.0",
-    "color": "0.6.0",
     "signals": "1.0.0",
     "hammerjs": "1.1.3",
     "steady": "1.1.0",
-    "blueimp-gallery": "2.15.1"
+    "prismic.io": "1.0.10",
+    "blueimp-gallery": "2.15.1",
+    "velocity-animate": "0.4.1",
+    "abyssa": "pauldijou/abyssa-js#34ef3ce8f5e77b348048a28131b3fb1cb13b1a38",
+    "tooltipster": "pauldijou/tooltipster#53466a49f7ddb21ef80340cef62bd390ee47edc4"
   },
   "devDependencies": {
     "browserify": "~3.36.0",
@@ -40,7 +39,7 @@
     "gulp-minify-css": "0.3.4",
     "gulp-usemin": "0.3.4",
     "gulp-rev": "0.4.0",
-    "gulp-clean": "0.2.4",
+    "gulp-rimraf": "0.1.0",
     "browserify-shim": "v3.5.0",
     "pretty-hrtime": "~0.2.1"
   },
@@ -48,10 +47,12 @@
     "transform": [ "browserify-shim" ]
   },
   "browser": {
-    "lightbox": "./node_modules/blueimp-gallery/js/blueimp-gallery.min.js"
+    "lightbox": "./node_modules/blueimp-gallery/js/blueimp-gallery.min.js",
+    "tooltip": "./node_modules/tooltipster/js/jquery.tooltipster.js"
   },
   "browserify-shim": {
-    "lightbox": "lightbox"
+    "lightbox": "lightbox",
+    "tooltip": "tooltip"
   },
   "repository" : { "type" : "git", "url" : "https://github.com/pauldijou/farewell" }
 }
