--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "bootstrap": "3.1.1",
     "font-awesome": "4.0.3",
     "mousetrap": "1.4.6",
-    "lightbox2": "2.7.1"
+    "lightbox2": "2.7.1",
+    "slick-carousel": "1.3.6"
   }
 }
