--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "signals": "1.0.0",
     "hammerjs": "1.1.3",
     "steady": "1.1.0",
-    "prismic.io": "1.0.10",
+    "prismic.io": "1.0.12",
     "blueimp-gallery": "2.15.1",
     "velocity-animate": "0.4.1",
     "abyssa": "pauldijou/abyssa-js#34ef3ce8f5e77b348048a28131b3fb1cb13b1a38",
@@ -49,11 +49,13 @@
   },
   "browser": {
     "lightbox": "./node_modules/blueimp-gallery/js/blueimp-gallery.min.js",
-    "tooltip": "./node_modules/tooltipster/js/jquery.tooltipster.js"
+    "tooltip": "./node_modules/tooltipster/js/jquery.tooltipster.js",
+    "carousel": "./bower_components/slick-carousel/slick/slick.js"
   },
   "browserify-shim": {
     "lightbox": "lightbox",
-    "tooltip": "tooltip"
+    "tooltip": "tooltip",
+    "carousel": "carousel"
   },
   "repository" : { "type" : "git", "url" : "https://github.com/pauldijou/farewell" }
 }
