--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-rev": "0.4.0",
     "gulp-rimraf": "0.1.0",
     "gulp-ignore": "1.1.0",
+    "gulp-shell": "0.2.8",
     "browserify-shim": "v3.5.0",
     "pretty-hrtime": "~0.2.1"
   },
